--- a/html/lesson3.html
+++ b/html/lesson3.html
@@ -11,8 +11,14 @@
     <b>this is bold effect</b>
     <i>this is italic effect</i>
     <u>this is underline effect</u>
-    <strike>Rs 10000</strike>
-    <font color="red" size="+4" face="times new roman">this is india and it is our country</font>
+    <strike>&#8377; 10000</strike>
+    <font color="red" size="+4" face="times new roman">this is india and it is our country</font> <br>
+    <font color="green" size="+4" face="Comic Sans MS">this is india and it is our country</font>
+    <br>
+    <font color="orange" size="+4" face="Courier">this is india and it is our country</font> <br/>
+    water formula H<sub>2</sub>0 <br/>
+    circle area formula &pi;<sup>2</sup>
+    
 </body>
 
 </html>
