--- a/javascript/lesson11.html
+++ b/javascript/lesson11.html
@@ -15,7 +15,7 @@
 
     <table border="1" cellpadding="10" align="center">
         <thead>
-            <th>sun</th>
+            <th>sun</th>    
             <th>mon</th>
             <th>tue</th>
             <th>wed</th>
@@ -24,70 +24,35 @@
             <th>sat</th>
         </thead>
 
-        <tbody align="center">
-            <tr id="row1">
+        <tbody align="center" id="calendar">
 
-            </tr>
-
-            <tr id="row2">
-
-            </tr>
-
-            <tr>
-                <td>9</td>
-                <td>10</td>
-                <td>11</td>
-                <td>12</td>
-                <td>13</td>
-                <td>14</td>
-                <td>15</td>
-            </tr>
-
-            <tr>
-                <td>16</td>
-                <td>17</td>
-                <td>18</td>
-                <td>19</td>
-                <td>20</td>
-                <td>21</td>
-                <td>22</td>
-            </tr>
-
-            <tr>
-                <td>23</td>
-                <td>24</td>
-                <td>25</td>
-                <td>26</td>
-                <td>27</td>
-                <td>28</td>
-                <td>29</td>
-            </tr>
-
-            <tr>
-                <td>30</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-                <td>-</td>
-            </tr>
         </tbody>
     </table>
-
+    <script src="common.js"></script>
     <script>
-
-
-        for (let i = 0; i < 6; i++) {
-            document.getElementById('row1').innerHTML += `<td>-</td>`;
+        var cal = $('calendar');
+        var content = '';
+        let count = 1;
+        let date = new Date(2024,6,0);
+        let lastDate = date.getDate(); //get last day of month;
+        
+        date = new Date(2024,6-1,1);
+        let firstDay = date.getDay();
+        alert(firstDay);
+        while (count <= lastDate) {
+            content += `<tr>`;
+            let temp = '';
+            let column = 1;
+            while (column <= 7 && count <= lastDate) {
+                temp += `<td>${count}</td>`;
+                column++;
+                count++;
+            }
+            content += temp + `</tr>`;
         }
-        document.getElementById('row1').innerHTML += `<td>1</td>`;
 
-        for (let i = 2; i <= 8; i++) {
-            document.getElementById('row2').innerHTML += `<td>${i}</td>`;
-        }
-
-
+        // cal.innerHTML = content;
+        $$('calendar', content);
     </script>
 </body>
 
